--- a/analysis/TCGA_pathways.Rmd
+++ b/analysis/TCGA_pathways.Rmd
@@ -233,7 +233,7 @@ ggsave(plot = all.path.sig.heatmap,
 #### Fisher's exact test between signatures and pathways in individual tissues
 
 ```{r, warning = FALSE}
-tissue.odds.ratio = pcawg_sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+tissue.odds.ratio = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
                                  pathways.input = TCGA.pathways.tissues,
                                  interaction_function = get_sig_path_assocs, 
                                  path.min.tissues = 30,
@@ -259,7 +259,7 @@ for (tissue in names(tissue.odds.ratio)) {
 
 
 ```{r}
-tissue.odds.ratio.unadjusted = pcawg_sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+tissue.odds.ratio.unadjusted = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
                                  pathways.input = TCGA.pathways.tissues,
                                  interaction_function = get_sig_path_assocs, 
                                  path.min.tissues = 30,
@@ -346,7 +346,7 @@ In this first case, I tried logging.
 
 
 ```{r, warning = FALSE}
-tissue.lm.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+tissue.lm.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
                                  pathways.input = TCGA.pathways.tissues,
                                  interaction_function = get_sig_path_lms,
                                  robust = FALSE,
@@ -516,7 +516,7 @@ ggsave(plot = pp.logged,
 ### Logistic regression getting pathways from signatures across tissues
 
 ```{r}
-tissue.log.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+tissue.log.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
                                  pathways.input = TCGA.pathways.tissues,
                                  interaction_function = get_sig_path_lms,
                                  path.min.tissues = 30,
