--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -286,14 +286,14 @@ ggsave(plot = pp.odds.ratio.unadjusted,
 ### Bipartite graph - not used 
 
 ```{r}
-sig.path.int.odds.summary.df = summarize_ints_to_df(tissue.odds.ratio.unadjusted)
-sig.path.oddsratio.bipartite = minor_plot(plot_bipartite2(sig.path.int.odds.summary.df),
+sig.path.oddsratio.bipartite = minor_plot(plot_bipartite2(tissue.odds.ratio.unadjusted),
                                         expand.factor = 0.5, expand.factor.y = 0.01)
 
 ggsave(plot = sig.path.oddsratio.bipartite,
        filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
                                     "PCAWG_summarized_sig_pathway_unadjusted.bipartite.pdf"),
        height = 5, width = 5.5, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+
 ```
 
 ### Tissues of Odds ratio interactions
