--- a/analysis/subclonality_SBS40.Rmd
+++ b/analysis/subclonality_SBS40.Rmd
@@ -17,6 +17,7 @@ library(survminer)
 source(here("R/load_packages.R"))
 library(gridExtra)
 library(ggforestplot)
+library(gginnards)
 
 fig.dir = here("figures/survival_summaries")
 ```
@@ -82,9 +83,27 @@ ggarrange(sbs40.lf, sbs5.lf, nrow = 2)
 
 ```{r}
 sbs5vs40.lfc = clonality %>% filter(signature  %in% c("SBS5", "SBS40") ) %>% 
+    mutate(signature = factor(signature, levels = c("SBS5", "SBS40"))) %>% 
     ggplot(aes(x = Cancer.Types, y = log2fc_clonalSubclonal, color = signature)) +
     geom_boxplot(outlier.size = 0, width = 0.4) + 
     geom_point(position=position_jitterdodge(jitter.width = 0.2, dodge.width = 0.4), size = 0.1) +
     theme(axis.text.x = element_text(angle = 90, vjust = 0.5), axis.title = element_blank()) 
+```
+
+```{r}
+dd = clonality %>% filter(signature  %in% c("SBS5", "SBS40") ) %>% 
+    mutate(signature = factor(signature, levels = c("SBS5", "SBS40"))) 
+
+bs5vs40.lfc = ggboxplot(data = dd, x = "Cancer.Types", y = "log2fc_clonalSubclonal",
+          color = "signature", palette = "jco", add = "jitter", add_params = list(size = 0.1))+
+  stat_compare_means(aes(group = signature), label = "p.signif") +
+    geom_hline(yintercept = 0) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5), axis.title = element_blank())  
+
+ph = bs5vs40.lfc$layers[[1]]
+bs5vs40.lfc$layers[[1]] = bs5vs40.lfc$layers[[4]]
+bs5vs40.lfc$layers[[4]] = ph
+
+
 ```
 
